--- a/src/scss/partials/_vars.scss
+++ b/src/scss/partials/_vars.scss
@@ -1,5 +1,5 @@
 $primary-color: #0282f9;
-$black-color: #1c1c1c;
-$darkgray-color: #303030;
-$gray-color: #797979;
-$lightgray-color: #8b8b8b;
+$black-color: #1c1c1c; //main
+$darkgray-color: #303030; //footer bottom
+$gray-color: #797979; //back icone
+$lightgray-color: #8b8b8b; //testo footer
