--- a/src/scss/partials/_generals.scss
+++ b/src/scss/partials/_generals.scss
@@ -4,8 +4,22 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .container{
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+li{
+  list-style: none;
+}
+
+img{
+  // width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
